--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+      src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      />
+    <img
+      src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt= "Yawn lion"
+      />
+    <img
+    src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt= "Yawn Lion"
+    title= "make this image link to pass"
+    />
   </body>
 </html>
